Fix code blocks not wrapping

--- a/style.css
+++ b/style.css
@@ -51,5 +51,5 @@ ul {
 
 code {
     font-family: monospace;
-    white-space: pre;
+    white-space: pre-wrap;
 }
